--- a/index.html
+++ b/index.html
@@ -53,15 +53,18 @@
 
         .mycomment {
             color: gray;
+
         }
 
         .mycards {
             width: 1200px;
-            margin: 20px auto 20px auto;
+            margin: 50px auto 20px auto;
         }
+
         .mypost {
-           
+
             width: 500px;
+            height: 330px;
             margin: 20px auto 20px auto;
             padding: 20px 20px 20px 20px;
             box-shadow: 0px 0px 5px 0px gray;
@@ -76,7 +79,8 @@
 
 
         }
-        .mybtn > button{
+
+        .mybtn>button {
             margin-right: 10px;
         }
     </style>
@@ -92,72 +96,89 @@
             <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
             <label for="floatingInput">movie URL</label>
         </div>
+        <div class="input-group mb-3">
+            <label class="input-group-text" for="inputGroupSelect01">rating</label>
+            <select class="form-select" id="inputGroupSelect01">
+              <option selected>-  -  -  -  -  -  -  -  -  -  -     s e l e c t     -  -  -  -  -  -  -  -  -  -  -</option>
+              <option value="1">⭐</option>
+              <option value="2">⭐⭐</option>
+              <option value="3">⭐⭐⭐</option>
+              <option value="4">⭐⭐⭐⭐</option>
+              <option value="5">⭐⭐⭐⭐⭐</option>
+            </select>
+          </div>
+
+
         <div class="form-floating">
             <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
                 style="height: 100px"></textarea>
             <label for="floatingTextarea2">Comments</label>
         </div>
         <div class="mybtn">
-        <button type="button" class="btn btn-dark">write</button>
-        <button type="button" class="btn btn-outline-dark">close</button>
-        </div>
-    <div class="mycards">
-        <div class="row row-cols-1 row-cols-md-4 g-4">
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">나홀로 집에</h5>
-                        <p class="card-text">크리스마스 시즌의 시카고. 말썽꾸러기라 집안 가족들로부터 욕을 듣고 따돌림 당하는 케빈은 늘 자신은 혼자 살거라면서 가족들이 모두
-                            없어졌으면 좋겠다고 생각한다.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">30년 이상의 유일한 명작</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">나홀로 집에</h5>
-                        <p class="card-text">크리스마스 시즌의 시카고. 말썽꾸러기라 집안 가족들로부터 욕을 듣고 따돌림 당하는 케빈은 늘 자신은 혼자 살거라면서 가족들이 모두
-                            없어졌으면 좋겠다고 생각한다.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">30년 이상의 유일한 명작</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">나홀로 집에</h5>
-                        <p class="card-text">크리스마스 시즌의 시카고. 말썽꾸러기라 집안 가족들로부터 욕을 듣고 따돌림 당하는 케빈은 늘 자신은 혼자 살거라면서 가족들이 모두
-                            없어졌으면 좋겠다고 생각한다.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">30년 이상의 유일한 명작</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">나홀로 집에</h5>
-                        <p class="card-text">크리스마스 시즌의 시카고. 말썽꾸러기라 집안 가족들로부터 욕을 듣고 따돌림 당하는 케빈은 늘 자신은 혼자 살거라면서 가족들이 모두
-                            없어졌으면 좋겠다고 생각한다.</p>
-                        <p>⭐⭐⭐</p>
-                        <p class="mycomment">30년 이상의 유일한 명작</p>
-                    </div>
-                </div>
-            </div>
-
+            <button type="button" class="btn btn-dark">write</button>
+            <button type="button" class="btn btn-outline-dark">close</button>
         </div>
     </div>
+    <div class="mycards">
+            <div class="row row-cols-1 row-cols-md-4 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
+                            class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">나홀로 집에</h5>
+                            <p class="card-text">크리스마스 시즌의 시카고. 말썽꾸러기라 집안 가족들로부터 욕을 듣고 따돌림 당하는 케빈은 늘 자신은 혼자 살거라면서 가족들이
+                                모두
+                                없어졌으면 좋겠다고 생각한다.</p>
+                            <p>⭐⭐⭐</p>
+                            <p class="mycomment">30년 이상의 유일한 명작</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">나홀로 집에</h5>
+                            <p class="card-text">크리스마스 시즌의 시카고. 말썽꾸러기라 집안 가족들로부터 욕을 듣고 따돌림 당하는 케빈은 늘 자신은 혼자 살거라면서 가족들이
+                                모두
+                                없어졌으면 좋겠다고 생각한다.</p>
+                            <p>⭐⭐⭐</p>
+                            <p class="mycomment">30년 이상의 유일한 명작</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
+                            class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">나홀로 집에</h5>
+                            <p class="card-text">크리스마스 시즌의 시카고. 말썽꾸러기라 집안 가족들로부터 욕을 듣고 따돌림 당하는 케빈은 늘 자신은 혼자 살거라면서 가족들이
+                                모두
+                                없어졌으면 좋겠다고 생각한다.</p>
+                            <p>⭐⭐⭐</p>
+                            <p class="mycomment">30년 이상의 유일한 명작</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
+                            class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">나홀로 집에</h5>
+                            <p class="card-text">크리스마스 시즌의 시카고. 말썽꾸러기라 집안 가족들로부터 욕을 듣고 따돌림 당하는 케빈은 늘 자신은 혼자 살거라면서 가족들이
+                                모두
+                                없어졌으면 좋겠다고 생각한다.</p>
+                            <p>⭐⭐⭐</p>
+                            <p class="mycomment">30년 이상의 유일한 명작</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+       
     </div>
 </body>
 
