--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                             <h5 class="card-title">나홀로 집에</h5>
                             <p class="card-text">크리스마스 시즌의 시카고. 말썽꾸러기라 집안 가족들로부터 욕을 듣고 따돌림 당하는 케빈은 늘 자신은 혼자 살거라면서 가족들이
                                 모두
-                                없어졌으면 좋겠다고 생각한다.</p>
+                                없어졌으면 좋겠다고 생각한다!</p>
                             <p>⭐⭐⭐</p>
                             <p class="mycomment">30년 이상의 유일한 명작</p>
                         </div>
